--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
             <h1>Is it Beatiful?</h1>
             <p class="lead">All the latest<strong><em>Tech</em></strong>, <strong><em>Design</em></strong> and <strong><em>Development</em></strong> news from around the world.</p>
         </div>
-        
+
         <div class="container team">
-            <img src="img/thandi.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/john.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/sally.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/lungi.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/bob.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/dave.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/jane.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/andile.jpg" class="img-thumbnail rounded-circle" width="90"/><img src="img/lee.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/thandi.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/john.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/sally.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/lungi.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/bob.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/dave.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/jane.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/andile.jpg" class="img-thumbnail rounded-circle" width="90"/>
+            <img src="img/lee.jpg" class="img-thumbnail rounded-circle" width="90"/>
         </div>
         
         <div class="row container mx-auto">
